--- a/docs/css/binancecoin.css
+++ b/docs/css/binancecoin.css
@@ -92,7 +92,12 @@ a:hover {
     display: block;
 }
 
-/* Responsivo */
+canvas {
+  width: 100% !important;
+  max-width: 700px;
+  height: auto;
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: 2rem;
