--- a/docs/css/bitcoin.css
+++ b/docs/css/bitcoin.css
@@ -1,10 +1,10 @@
-/* ripple.css */
+/* bitcoin.css */
 
 body {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #0e1014; 
+  background-color: #0d1117;
   color: #f0f0f0;
   line-height: 1.6;
 }
@@ -16,25 +16,24 @@ body {
 }
 
 h1 {
-  color: #00aaff;
+  color: #f7931a;
   font-size: 2.5rem;
   margin-bottom: 20px;
   text-align: center;
-  border-bottom: 2px solid #00aaff;
+  border-bottom: 2px solid #f7931a;
   padding-bottom: 30px;
   padding-top: 30px;
-  
 }
 
 h2 {
-  color: #66c2ff;
+  color: #f7931a;
   font-size: 1.8rem;
   margin-top: 40px;
   margin-bottom: 10px;
 }
 
 h3 {
-  color: #b0bec5; 
+  color: #e2b93d;
   font-size: 1.3rem;
   margin-top: 30px;
 }
@@ -55,43 +54,48 @@ ul li {
 }
 
 a {
-  color: #00aaff;
+  color: #f7931a;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
 a:hover {
-  color: #66c2ff;
+  color: #e2b93d;
 }
 
 .onde-investir {
   margin-top: 50px;
   padding: 20px;
-  border: 1px solid #00aaff;
+  border: 1px solid #f7931a;
   border-radius: 10px;
-  background-color: #1c1f26;
+  background-color: #161b22;
 }
-
 .btn-voltar {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  z-index: 9999;
-  background-color: #00aaff;
-  padding: 8px;
-  border-radius: 50%;
-  transition: background-color 0.3s ease;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 9999;
+    background-color: #f7931a;
+    padding: 8px;
+    border-radius: 50%;
+    transition: background-color 0.3s ease;
 }
 
 .btn-voltar:hover {
-  background-color: rgba(0, 170, 255, 0.8);
+    background-color: rgba(243, 130, 10, 0.8);
 }
 
 .btn-voltar img {
-  width: 24px;
-  height: 24px;
-  display: block;
+    width: 24px;
+    height: 24px;
+    display: block;
 }
+canvas {
+  width: 100% !important;
+  height: auto !important;
+  max-width: 700px;
+}
+
 
 @media (max-width: 768px) {
   h1 {
