--- a/docs/css/ethereum.css
+++ b/docs/css/ethereum.css
@@ -92,6 +92,13 @@ a:hover {
   display: block;
 }
 
+canvas {
+  width: 100% !important;
+  max-width: 700px;
+  height: auto;
+}
+
+
 @media (max-width: 768px) {
   h1 {
     font-size: 2rem;
